# win12-i18n

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
src/win12_i18n/: __init__.py  __main__.py  cli.py  exceptions.py  manager.py  models.py  parser.py
tests/: test_cli.py  test_manager.py  test_parser.py
