[project]
name = "win12-i18n"
version = "0.1.1"
description = "Windows 12 网页版 i18n 管理 CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "win12-online"},
]
keywords = ["i18n", "localization", "windows12", "properties"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Localization",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
win12-i18n = "win12_i18n.cli:main"

[project.urls]
Homepage = "https://github.com/win12-online/win12-i18n"
Repository = "https://github.com/win12-online/win12-i18n"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/win12_i18n"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
